@@ -3,6 +3,7 @@ Description=CM4all Workshop
 After=network.target
 
 [Service]
+Type=notify
 ExecStart=/usr/lib/cm4all/workshop/systemd/run.sh
 KillMode=process
 ExecReload=/bin/kill -HUP $MAINPID
