@@ -5,6 +5,7 @@ cm4all-workshop (2.0) unstable; urgency=low
   * suport syslog over IPv6
   * import the beng-proxy child process spawner
   * require systemd
+  * systemd: set Type=notify
 
  --
 
